4.1.0
-----
1. Move track/album view selection into queue menu.

4.0.4
------
1. In album style, embolden current track title even if first track in album.
2. Fix warning when changing queue view to/from album style.

4.0.3
-----
 1. Fix restating LMS from 'Server settings' page.
 2. Improve/fix album style queue for radio streams.
 3. Don't group by release type if LMS is set to ignore this.
 4. Only call 'Slim::Schema::Album->releaseTypes' for LMS 8.4 or newer.
 5. When adding/playing all discs of multi-disc set use album_id.
 6. In album style queue, group albums by disc number.
 7. Fix missing add/play hover buttons on tracks in browse view.
 8. Fix swipe to change track.
 9. Set default queue transfer method to 'Move'.
10. Fix toggle queue icon when using coloured toolbars.
11. Hide toolbar elements if insufficient width.
12. Fix breakage on older iOS.

4.0.2
-----
 1. Respect LMS's setting to not group by release type.
 2. Add jumplist support when showing multiple release types.
 3. Don't highlight active jumplist item.
 4. Remove option for letter overlay whilst scrolling.
 5. Fix reading some LMS prefs where LMS returns '?'.
 6. Only request artist_ids when searching if LMS 8.4 or newer.
 7. Allow user-supplied backdrops, by placing into
    prefs/material-skin/backdrops
 8. Query LMS for release type names.
 9. Fix play button showing in mobile layout when no tracks in queue.
10. Remove link to user guide, its out of date.
11. Adjust volume with arrow keys, if control has focus.
12. 'Pulse' now-playing cover menu button if cover clicked.
13. Add native callback for titlebar and window control buttons, mainly for
    use in next version of Melodeon.
14. When using album style highlight all tracks of current album.
15. Clear queue selection when activate certain menu items.
16. Show menu buttons for tracks in browse and queue views when some are
    selected.
17. Remove hack to place 'Manage plugins' first in list, as LMS 8.4 now has a