@@ -132,7 +132,6 @@
  top:calc(var(--main-toolbar-height) + var(--sub-toolbar-height));
  height:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + var(--sub-toolbar-height) + var(--bottom-toolbar-height) + var(--mobile-npbar-height)));
  width:100vw;
- overflow:auto;
  backface-visibility:hidden;
  margin:0px;
 }
@@ -142,11 +141,11 @@
 }
 
 .lms-list-jump, .lms-image-grid-jump {
- width:calc(100vw - var(--jump-list-width))!important;
+ width:calc(100vw - (var(--jump-list-width) + var(--browse-context-width)))!important;
  left:var(--jump-list-width);
 }
 
-.lms-jumplist {
+.lms-jumplist, .browse-context {
  height:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + var(--sub-toolbar-height) + var(--bottom-toolbar-height) + var(--mobile-npbar-height)));
 }
 
@@ -161,7 +160,8 @@
 }
 
 .detailed-sub .lms-list,
-.detailed-sub .lms-image-grid {
+.detailed-sub .lms-image-grid,
+.detailed-sub .browse-context {
  top:calc(var(--main-toolbar-height) + (var(--sub-toolbar-height)*2))!important;
  height:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + (var(--sub-toolbar-height)*2) + var(--bottom-toolbar-height) + var(--mobile-npbar-height)))!important;
 }
